--- a/pCompany/nbproject/project.properties
+++ b/pCompany/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/pCompany
 excludes=
 file.reference.KControls-2.0.jar=C:\\Users\\ali\\Desktop\\Librarys\\KControls-2.0.jar
+file.reference.KGradientPanel.jar=C:\\Users\\ali\\Desktop\\Librarys\\KGradientPanel.jar
 file.reference.miglayout-4.0.jar=C:\\Users\\ali\\Desktop\\Librarys\\miglayout-4.0.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\ali\\Desktop\\Librarys\\mysql-connector-java-8.0.29.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\ali\\Desktop\\Librarys\\TimingFramework-0.55.jar
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.miglayout-4.0.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
-    ${file.reference.KControls-2.0.jar}
+    ${file.reference.KControls-2.0.jar}:\
+    ${file.reference.KGradientPanel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,7 +82,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=pCompany
-main.class=com.pocan.pcompany.main.Main
+main.class=com.pocan.pcompany.main.LoginFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
